--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,13 +10,13 @@ jobs:
     steps:
     - name: Get Release
       id: get_release
-      uses: bruceadams/get-release@v1.2.2
+      uses: bruceadams/get-release@v1.3.2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Dump upload url to file
       run: echo '${{ steps.get_release.outputs.upload_url }}' > upload_url
     - name: Upload upload_url
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v3
       with:
         name: upload_url
         path: upload_url
@@ -28,10 +28,10 @@ jobs:
         platform: [
           'linux-arm',
           'linux-arm64',
-          'linux-x64',
+#          'linux-x64',
         ]
         pair: [
-          'python:3.7',
+#          'python:3.7',
           'python:3.9',
         ]
         include:
@@ -39,11 +39,11 @@ jobs:
             host-os: 'ubuntu-latest'
           - platform: 'linux-arm64'
             host-os: 'ubuntu-latest'
-          - platform: 'linux-x64'
-            host-os: 'ubuntu-latest'
-          - pair: 'python:3.7'
-            language: 'python'
-            version: '3.7'
+#          - platform: 'linux-x64'
+#            host-os: 'ubuntu-latest'
+#          - pair: 'python:3.7'
+#            language: 'python'
+#            version: '3.7'
           - pair: 'python:3.9'
             language: 'python'
             version: '3.9'
@@ -52,16 +52,17 @@ jobs:
 
     steps:
     - name: Download upload_url
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v3
       with:
         name: upload_url
+        path: upload_url
     - name: Set upload_url
       run: echo "UPLOAD_URL=$(cat upload_url/upload_url)" >> $GITHUB_ENV
     - name: Set release version
       run: echo "RELEASE_VERSION=${GITHUB_REF:10}" >> $GITHUB_ENV
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Use Python ${{ matrix.version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.version }}
     - name: Make build script executable
@@ -72,23 +73,16 @@ jobs:
       run: |
         ./build.sh "${{ matrix.platform }}" "${{ matrix.language }}" "${{ matrix.version }}"
       shell: bash
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+    - name: Upload Release Asset tgz
+      uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}
-        asset_path: example-addon1-${{ env.RELEASE_VERSION }}-${{ matrix.platform }}-v${{ matrix.version }}.tgz
-        asset_name: example-addon1-${{ env.RELEASE_VERSION }}-${{ matrix.platform }}-v${{ matrix.version }}.tgz
-        asset_content_type: application/zip
-    - name: Upload Release Asset Checksum
-      id: upload-release-asset-checksum
-      uses: actions/upload-release-asset@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        asset_path: Candle-manager-addon-${{ env.RELEASE_VERSION }}-${{ matrix.platform }}-v${{ matrix.version }}.tgz
+      
+    - name: Upload Release Asset shasum
+      uses: shogo82148/actions-upload-release-asset@v1
       with:
         upload_url: ${{ env.UPLOAD_URL }}
         asset_path: example-addon1-${{ env.RELEASE_VERSION }}-${{ matrix.platform }}-v${{ matrix.version }}.tgz.sha256sum
-        asset_name: example-addon1-${{ env.RELEASE_VERSION }}-${{ matrix.platform }}-v${{ matrix.version }}.tgz.sha256sum
-        asset_content_type: text/plain
+      
